Respond to atburke feedback
- Make the main help description more visible. Assume that the main help
  description is not necessarily a complete sentence, adding the text to
  the end of the introductory sentence using a colon.

- Add a make rule for running CLI docs generator tests. Use the `-run`
  flag since the tests are in a package we already run tests for in
  another make rule.

--- a/lib/utils/docs-usage.md.tmpl
+++ b/lib/utils/docs-usage.md.tmpl
@@ -50,10 +50,6 @@ Arguments:
 $ {{.Name}}{{template "FormatCommand" .}}{{if .Commands}} <command> [<args> ...]{{end}}
 ```
 
-{{if .Help -}}
-{{.Help|Wrap 0 }}
-{{end -}}
-
 {{end -}}
 ---
 title: {{.App.Name}} Reference
@@ -61,7 +57,9 @@ description: Provides a comprehensive list of commands, arguments, and flags for
 ---
 
 This guide provides a comprehensive list of commands, arguments, and flags for
-{{.App.Name}}.
+{{.App.Name}}: {{ if .App.Help -}}
+{{- .App.Help|Wrap 0 }}
+{{ end -}}
 
 {{template "FormatUsage" .App -}}
 {{if .Context.Flags -}}
