Respond to zmb3 feedback
- Use Fprintf instead of Buffer.WriteString.
- Use the zero value of bytes.Buffer instead of NewBuffer.
- Rename `.*ToColumns` functions to `.*ToRows` for clarity.
- Use slices.ContainsFunc in anyVisibleFlags.
- Use slices.ContainsFunc in anyEnvVarsForCmd.
- Clean up argsToRows.
- Minor cleanup in TestUpdateAppUsageTemplate.
- Clean up sortCommandsByName (no need to implement sort.Interface).
- Read the docs usage template from disk in UpdateAppUsageTemplate. For
  this to work, add the function updateAppUsageTemplate, which takes an
  io.Reader, and use separate file paths to pass the io.Reader to the
  function in the tests and in UpdateAppUsageTemplate.
- Inline formatFlagForTable and remove unnecessary branching.
- Add an ADDTAGS environment variable to the `test-go-unit` make
  target so it's possible to pass arbitrary build tags, e.g., "docs".

--- a/lib/utils/docs-usage.md.tmpl
+++ b/lib/utils/docs-usage.md.tmpl
@@ -21,7 +21,7 @@ Environment variables:
 
 |Variable|Default|Description|
 |---|---|---|
-{{- EnvVarsToColumns .Args .Flags|FormatThreeColMarkdownTable}}
+{{- EnvVarsToRows .Args .Flags|FormatThreeColMarkdownTable}}
 
 {{end -}}
 
@@ -30,7 +30,7 @@ Flags:
 
 |Flag|Default|Description|
 |---|---|---|
-{{- .Flags|FlagsToColumns|FormatThreeColMarkdownTable }}
+{{- .Flags|FlagsToRows|FormatThreeColMarkdownTable }}
 
 {{end -}}
 {{ if .Args -}}
@@ -38,7 +38,7 @@ Arguments:
 
 |Argument|Default|Description|
 |---|---|---|
-{{- .Args|ArgsToColumns|FormatThreeColMarkdownTable }}
+{{- .Args|ArgsToRows|FormatThreeColMarkdownTable }}
 
 {{end -}}
 {{end -}}
@@ -67,7 +67,7 @@ Global flags:
 
 |Flag|Default|Description|
 |---|---|---|
-{{- .Context.Flags|FlagsToColumns|FormatThreeColMarkdownTable}}
+{{- .Context.Flags|FlagsToRows|FormatThreeColMarkdownTable}}
 
 {{end -}}
 {{if AnyEnvVarsForCmd .Context.Args .Context.Flags -}}
@@ -75,7 +75,7 @@ Global environment variables:
 
 |Variable|Default|Description|
 |---|---|---|
-{{- EnvVarsToColumns .Context.Args .Context.Flags|FormatThreeColMarkdownTable}}
+{{- EnvVarsToRows .Context.Args .Context.Flags|FormatThreeColMarkdownTable}}
 
 {{end -}}
 {{if .Context.Args -}}
@@ -83,7 +83,7 @@ Arguments:
 
 |Argument|Default|Description|
 |---|---|---|
-{{- .Context.Args|ArgsToColumns|FormatThreeColMarkdownTable}}
+{{- .Context.Args|ArgsToRows|FormatThreeColMarkdownTable}}
 
 {{end -}}
 {{if .App.Commands -}}
