--- a/integrations/terraform-mwi/templates/data-sources.md.tmpl
+++ b/integrations/terraform-mwi/templates/data-sources.md.tmpl
@@ -1,6 +1,6 @@
 ---
 title: Reference for the {{.Name}} Terraform data-source
-sidebar_label: {{ slice .Name (len "teleport_") }}
+sidebar_label: {{ slice .Name (len "teleportmwi_") }}
 description: This page describes the supported values of the {{.Name}} data-source of the Teleport Terraform provider.
 ---
 
