--- a/integrations/terraform-mwi/templates/resources.md.tmpl
+++ b/integrations/terraform-mwi/templates/resources.md.tmpl
@@ -1,6 +1,6 @@
 ---
 title: Reference for the {{.Name}} Terraform resource
-sidebar_label: {{ slice .Name (len "teleport_") }}
+sidebar_label: {{ slice .Name (len "teleportmwi_") }}
 description: This page describes the supported values of the {{.Name}} resource of the Teleport Terraform provider.
 ---
 
