--- a/integrations/terraform-mwi/templates/ephemeral-resources-index.mdx.tmpl
+++ b/integrations/terraform-mwi/templates/ephemeral-resources-index.mdx.tmpl
@@ -1,5 +1,5 @@
 ---
-title: "Terraform resources index"
+title: "Terraform ephemeral resources index"
 description: "Index of all the resources supported by the Teleport MWI Terraform Provider"
 ---
 
@@ -7,11 +7,11 @@ description: "Index of all the resources supported by the Teleport MWI Terraform
 {{ "{/*To regenerate, navigate to integrations/terraform and run `make docs`.*/}" }}
 
 {/*
-    This file will be renamed resources.mdx during build time.
+    This file will be renamed ephemeral-resources.mdx during build time.
     The template name is reserved by tfplugindocs so we suffix with -index.
 */}
 
-The Teleport MWI Terraform provider supports the following resources:
-{{ range $key, $value := .ResourceFiles }}
+The Teleport MWI Terraform provider supports the following ephemeral resources:
+{{ range $key, $value := .EphemeralResourceFiles }}
   - [`{{$key}}`](./{{$value}}.mdx)
 {{- end }}
