--- a/integrations/terraform-mwi/templates/data-sources.md.tmpl
+++ b/integrations/terraform-mwi/templates/data-sources.md.tmpl
@@ -1,7 +1,7 @@
 ---
 title: Reference for the {{.Name}} Terraform data-source
 sidebar_label: {{ slice .Name (len "teleportmwi_") }}
-description: This page describes the supported values of the {{.Name}} data-source of the Teleport Terraform provider.
+description: This page describes the supported values of the {{.Name}} data-source of the Teleport MWI Terraform provider.
 ---
 
 {{ "{/*Auto-generated file. Do not edit.*/}" }}
