--- a/integrations/terraform-mwi/templates/ephemeral-resources.md.tmpl
+++ b/integrations/terraform-mwi/templates/ephemeral-resources.md.tmpl
@@ -1,13 +1,13 @@
 ---
-title: Reference for the {{.Name}} Terraform resource
+title: Reference for the {{.Name}} Terraform ephemeral resource
 sidebar_label: {{ slice .Name (len "teleportmwi_") }}
-description: This page describes the supported values of the {{.Name}} resource of the Teleport Terraform provider.
+description: This page describes the supported values of the {{.Name}} ephemeral resource of the Teleport MWI Terraform provider.
 ---
 
 {{ "{/*Auto-generated file. Do not edit.*/}" }}
 {{ "{/*To regenerate, navigate to integrations/terraform and run `make docs`.*/}" }}
 
-This page describes the supported values of the {{.Name}} resource of the Teleport Terraform provider.
+This page describes the supported values of the {{.Name}} ephemeral resource of the Teleport MWI Terraform provider.
 {{ includefileifexists (printf "./examples/resources/%s/introduction.md" .Name)}}
 
 {{ .Description | trimspace }}
