--- a/integrations/terraform-mwi/templates/data-sources-index.mdx.tmpl
+++ b/integrations/terraform-mwi/templates/data-sources-index.mdx.tmpl
@@ -1,6 +1,9 @@
 ---
-title: "Terraform data-sources index"
+title: "MWI Terraform data-sources index"
 description: "Index of all the data-sources supported by the Teleport MWI Terraform Provider"
+labels:
+  - reference
+  - mwi
 ---
 
 {{ "{/*Auto-generated file. Do not edit.*/}" }}
@@ -10,6 +13,17 @@ description: "Index of all the data-sources supported by the Teleport MWI Terraf
     This file will be renamed data-sources.mdx during build time.
     The template name is reserved by tfplugindocs so we suffix with -index.
 */}
+
+<Admonition type="info">
+This is reference page is for the Teleport MWI Terraform provider, which
+generates short-lived credentials using Teleport Machine & Workload Identity.
+These short-lived credentials can be used to grant other Terraform providers
+access to resources through Teleport.
+
+If you are looking to manage the configuration of Teleport itself, use the
+[Teleport Terraform Provider](../../terraform-provider/terraform-provider.mdx)
+instead.
+</Admonition>
 
 The Teleport MWI Terraform provider supports the following data-sources:
 {{ range $key, $value := .DataSourceFiles }}
