--- a/integrations/terraform-mwi/templates/ephemeral-resources.md.tmpl
+++ b/integrations/terraform-mwi/templates/ephemeral-resources.md.tmpl
@@ -2,6 +2,9 @@
 title: Reference for the {{.Name}} Terraform ephemeral resource
 sidebar_label: {{ slice .Name (len "teleportmwi_") }}
 description: This page describes the supported values of the {{.Name}} ephemeral resource of the Teleport MWI Terraform provider.
+labels:
+  - reference
+  - mwi
 ---
 
 {{ "{/*Auto-generated file. Do not edit.*/}" }}
